Ajout de l'affichage du temps pour finir le Quiz + Bouton Next finit

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
             <button class="answer4">Réponse D</button>
         </div>
 
-        <button class="nextButton">Question Suivante</button>
+        <div class="next">
+            <button class="nextButton">Question Suivante</button>
+        </div>
+
 
         <section class="valid">
             <h4 id="numv">Nombre de bonne réponse</h4>
