Ajout d'une premiere version du leaderboard qui classe en fonction des points uniquement + ajout de la demande du nom au début du quiz

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <main>
         <section class="num-question">
-            <h1 id="num-question">Numéro de question</h1>
+            <h1 id="num-question">Question 1 sur 16 :</h1>
         </section>
 
         <section class="question">
@@ -53,7 +53,7 @@
 
 
         <section class="valid">
-            <h4 id="numv">Nombre de bonne réponse</h4>
+            <h4 id="numv">0 Bonne réponse sur 16</h4>
         </section>
     </main>
 
