--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
     </div>
 
     <div class="end">
-        <p class="endTxt"></p>
+        <table>
+            <thead>
+                <tr><th class="endTxt" colspan="3"></th></tr>
+              <tr><th>Joueur</th><th>Score</th><th>Temps</th></tr>
+            </thead>
+            <tbody class="leaderboard"></tbody>
+        </table></p>
     </div>
+
 
 
     <nav>
@@ -28,7 +35,7 @@
 
     <main>
         <section class="num-question">
-            <h1 id="num-question">Question 1 sur 16 :</h1>
+            <h1 id="num-question">Question 1 sur 20 :</h1>
         </section>
 
         <section class="question">
@@ -53,7 +60,7 @@
 
 
         <section class="valid">
-            <h4 id="numv">0 Bonne réponse sur 16</h4>
+            <h4 id="numv">0 Bonne réponse sur 20</h4>
         </section>
     </main>
 
