add_last_CSS_features

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
     <header>
         <h1 id="title">The Vogue Merry</h1>
-        <h2 id="quiz-name">General Quiz</h2>
+        <h2 id="quiz-name">GENERAL QUIZ</h2>
     </header>
 
     <main>
             <h3 id="num-question">Question 1 sur 20 :</h3>
-
+           
         <section class="question">
             <img src="assets/wcs.jpg" alt="Image de question" id="img">
             <h3 id="quest">Ici sera affiché la question après le début du Quiz</h3>
@@ -63,13 +63,15 @@
 
 
         <section class="valid">
-            <h4 id="numv">0 Bonne réponse sur 20</h4>
+            <h4 id="numv">0 réponse ✅ sur 20</h4>
         </section>
     </main>
 
     <footer>
-        <button id="mute">Mute / Unmute</button>
-        © Wilder 2023
+        <p id="wcs"></p>© Wilder 2023
+        <div id="mute">
+            <button id="mute_button">Mute / Unmute</button>
+        </div>
     </footer>
 
     <script src="index.js"></script>
