Changement du bonton pour Mute / Unmute

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vogue Merry - Quiz</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -70,7 +71,7 @@
     <footer>
         <p id="wcs"></p>© Wilder 2023
         <div id="mute">
-            <button id="mute_button">Mute / Unmute</button>
+            <button id="mute_button"><i class="fa fa-volume-up fa-2x"></i></button>
         </div>
     </footer>
 
