Changement de quelques couleurs

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </main>
 
     <footer>
-        <p id="wcs"></p>© Wilder 2023
+        © Wilder 2023
         <div id="mute">
             <button id="mute_button"><i class="fa fa-volume-up fa-2x"></i></button>
         </div>
