--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
             <div class="form-example">
-                <form action="" method="get" name="name">
+                <form method="get" name="name">
                     <label for="name" id="questName">Quel est votre nom? <br></label>
                     <input type="text" name="name" id="name">
                     <input id="start-button" type="submit" value="Start">
@@ -31,7 +31,7 @@
               <tr><th>Joueur</th><th>Score</th><th>Temps</th></tr>
             </thead>
             <tbody id="leaderboard"></tbody>
-        </table></p>
+        </table>
     </div>
 
 
